# Orkystra

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Directory.Build.props  Directory.Packages.props  FleetOps.code-workspace  FleetOps.slnx  MANIFEST.json  README.md  ROADMAP.md  VALIDATION.md  agent.md  docker-compose.pilot.yml  docker-compose.yml  opencode.json
.agent/: CURRENT_SPRINT.md  DECISIONS.md  HANDOFF.md  PLANS.md  PROJECT_STATE.json  QUALITY_REPORT.md
.github/: copilot-instructions.md
backend/: Orkystra.slnx
docs/: development.md
infrastructure/: docker-compose.stack.yml  docker-compose.yml
prompts/: AUDIT_PROJECT.md  NEXT_SPRINT.md  REPAIR_AND_CONTINUE.md
python-services/: pyproject.toml
python-services/ai-service/: Dockerfile
python-services/ai-service/src/orkystra_ai_service/: agents.py  app.py  graph.py  models.py  projections.py  rag.py
python-services/optimization-service/: Dockerfile
python-services/optimization-service/src/orkystra_optimization_service/: app.py  demo_data.py  models.py  solver.py
python-services/tests/: test_ai_service.py  test_optimization_service.py  test_service_skeletons.py
scripts/: capture-android-simulation.ps1  dev-down.ps1  dev-down.sh  dev-up.ps1  dev-up.sh  quality-gate.ps1  quality-gate.sh  run-full-simulation.ps1  sql-backup.ps1  sql-backup.sh  sql-restore.ps1  sql-restore.sh
sprints/: SPRINT-00-FOUNDATION.md  SPRINT-01-IDENTITY-TENANCY.md  SPRINT-02-FLEET-REGISTRY.md  SPRINT-03-TRACKING-SIMULATION.md  SPRINT-04-DISPATCH-MISSIONS.md  (+26 more)
(+717 files in other folders)
