[project]
name = "orkystra-python-services"
version = "0.1.0"
description = "Python service skeletons for Orkystra AI and optimization services."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "langgraph>=0.6.0",
  "ortools>=9.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
